# tdameritradeclient

./: .gitignore  Cargo.toml  Changes.md  Readme.md
doc/: .rustc_info.json  .rustdoc_fingerprint.json  crates.js  search-index.js  settings.html  source-files.js
doc/doc/: source-files.js
doc/src/tdameritradeclient/: account.rs.html  auth.rs.html  lib.rs.html  param.rs.html  request.rs.html  tdaclient.rs.html
doc/tdameritradeclient/: all.html  enum.Account.html  enum.History.html  enum.Instruments.html  enum.OptionChain.html  enum.Order.html  enum.Transactions.html  index.html  sidebar-items.js  struct.TDAClient.html
doc/tdameritradeclient/account/: fn.create_account_model.html  fn.get_account_ids.html  fn.get_account_model.html  fn.get_primary_account_id.html  index.html  sidebar-items.js  struct.Positions.html  struct.SecuritiesAccount.html
doc/tdameritradeclient/auth/: fn.get_code_weblink.html  fn.get_refresh_from_refresh.html  fn.get_token_from_code.html  fn.get_token_from_refresh.html  index.html  sidebar-items.js  struct.TDauth.html
doc/tdameritradeclient/model/: index.html
doc/tdameritradeclient/param/: enum.Account.html  enum.Instruments.html  enum.Movers.html  (+6 more)
docs/: .rustc_info.json
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
examples/: accountinfo.rs  accountmodel.rs  createorder.rs  deleteorder.rs  history.rs  listorders.rs  optionchain.rs  optionchainmodel.rs  quotes.rs
src/: account.rs  auth.rs  authmanagedclient.rs  client.rs  error.rs  lib.rs  param.rs  request.rs  tdaclient.rs
src/model/: account.rs  instrument.rs  mod.rs  optionchain.rs  pricehistory.rs  quote.rs  token.rs  userprincipals.rs
tests/: clienttests.rs
(+504 files in other folders)
