[package]
name = "tdameritradeclient"
version = "0.3.0"
authors = ["Jas Bertovic <jas@bertovic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.15.0", features = ["form"] }
serde_json = "1.0"
url = "2.1.1"
log = "0.4"

[dev-dependencies]
env_logger = "0.7"
