[package]
name = "tdameritradeclient"
version = "0.4.5"
authors = ["Jas Bertovic <jas@bertovic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.22.0", features = ["form"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
url = "2.1.1"
log = "0.4"

[dev-dependencies]
env_logger = "0.9"

[features]
live-test = ["set-tdauthtoken", "set-tdauthrefresh"]
# run tests as cargo test --features=dev -- --nocapture
# allows TDAUTHTOKEN to be set through env variable to run tests
set-tdauthtoken = []
# use tdauth env variables, TDREFRESHTOKEN, TDCLIENTID need to be set
# use development links for API access
set-tdauthrefresh = []